feat: implement hunter search experience

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-# API endpoint for e-Gov law data
-VITE_API_BASE_URL=https://api.example.com
+# e-Gov API endpoint when calling directly (non-proxy)
+VITE_EGOV_LAW_API_BASE_URL=https://www.e-gov.go.jp/elaws/api/v1/
+
+# Enable proxying requests through /api/proxy (recommended for browsers)
+VITE_USE_PROXY=true
+
+# Override the proxy endpoint (defaults to /api/proxy?target=)
+VITE_PROXY_BASE_URL=/api/proxy?target=
 
 # Feature flags
 VITE_FEATURE_GACHA=true
