--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "lint": "eslint . --max-warnings=0",
     "format": "prettier --write .",
     "test": "vitest run",
+    "typecheck": "tsc --noEmit",
     "test:watch": "vitest",
-    "test:e2e": "echo \"Playwright setup pending\""
+    "test:e2e": "playwright test"
   },
   "dependencies": {
+    "fast-xml-parser": "^4.4.0",
+    "framer-motion": "^10.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "zustand": "^4.5.4",
-    "fast-xml-parser": "^4.4.0",
-    "framer-motion": "^10.18.0"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.7.0",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.1",
@@ -31,11 +34,11 @@
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "@vitejs/plugin-react": "^4.4.1",
-    "@netlify/functions": "^2.7.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-playwright": "^2.2.2",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "jsdom": "^25.0.1",
