--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "types": ["vite/client", "node"]
+    "types": ["vite/client", "node", "playwright"]
   },
-  "include": ["src", "test", "vite.config.ts", "vitest.config.ts"],
+  "include": ["src", "test", "e2e", "vite.config.ts", "vitest.config.ts", "playwright.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
