--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,5 +10,11 @@
     "noImplicitAny": true,
     "strictNullChecks": true
   },
-  "include": ["vite.config.ts", "vitest.config.ts", "tailwind.config.js", "postcss.config.js"]
+  "include": [
+    "vite.config.ts",
+    "vitest.config.ts",
+    "playwright.config.ts",
+    "tailwind.config.js",
+    "postcss.config.js"
+  ]
 }
