--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "types": ["vite/client", "node", "playwright"]
+    "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom", "node", "playwright"]
   },
   "include": ["src", "test", "e2e", "vite.config.ts", "vitest.config.ts", "playwright.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
