--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
     "strictNullChecks": true,
     "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom", "node", "playwright"]
   },
-  "include": ["src", "test", "e2e", "vite.config.ts", "vitest.config.ts", "playwright.config.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "test", "e2e", "vite.config.ts", "vitest.config.ts", "playwright.config.ts"]
 }
