Prepare deployment and caching

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-# e-Gov API endpoint when calling directly (non-proxy)
+
+# API endpoints
 VITE_EGOV_LAW_API_BASE_URL=https://www.e-gov.go.jp/elaws/api/v1/
+VITE_API_BASE_URL=https://www.e-gov.go.jp/elaws/api/v1/
 
 # Enable proxying requests through /api/proxy (recommended for browsers)
 VITE_USE_PROXY=true
 
 # Override the proxy endpoint (defaults to /api/proxy?target=)
 VITE_PROXY_BASE_URL=/api/proxy?target=
+
+# CORS origin override for deployed proxy functions
+PROXY_ORIGIN=
 
 # Feature flags
 VITE_FEATURE_GACHA=true
