--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,14 @@
     "strictNullChecks": true,
     "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom", "node", "playwright"]
   },
-  "include": ["src", "test", "e2e", "vite.config.ts", "vitest.config.ts", "playwright.config.ts"]
+  "include": [
+    "src",
+    "test",
+    "e2e",
+    "api",
+    "netlify/functions",
+    "vite.config.ts",
+    "vitest.config.ts",
+    "playwright.config.ts"
+  ]
 }
