--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 
 # API endpoints
-VITE_EGOV_LAW_API_BASE_URL=https://www.e-gov.go.jp/elaws/api/v1/
-VITE_API_BASE_URL=https://www.e-gov.go.jp/elaws/api/v1/
+VITE_EGOV_LAW_API_BASE_URL=https://laws.e-gov.go.jp/api/2/
+VITE_API_BASE_URL=https://laws.e-gov.go.jp/api/2/
 
 # Enable proxying requests through /api/proxy (recommended for browsers)
 VITE_USE_PROXY=true
